--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "^4.8.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.9",
     "bcryptjs": "^2.4.3",
